--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_rifles.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_rifles.ltx
@@ -2686,6 +2686,7 @@ hud                          = wpn_m249_specter_hud
 1icon_layer_x                = 55
 1icon_layer_y                = -2
 
+zoom_step_count				 = 1
 inv_weight                   = 8.08
 zoom_rotate_time		     = 0.25
 use_alt_aim_hud              = true
@@ -2885,8 +2886,8 @@ scope_texture                    =
 
 s3ds_exit_pupil		= 0.4
 ![wpn_pkm_zenit_siber_specter_hud]
-        aim_hud_offset_pos               = 0.007058, -0022065, -0.043522
-        aim_hud_offset_pos_16x9          = 0.007058, -0022065, -0.043522
+        aim_hud_offset_pos               = 0.007058, -0.022065, -0.043522
+        aim_hud_offset_pos_16x9          = 0.007058, -0.022065, -0.043522
         aim_hud_offset_rot               = 0.007856, 0.002285, 0.009321
         aim_hud_offset_rot_16x9          = 0.007856, 0.002285, 0.009321
 		
