--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_3ds_gamma_scopes.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_3ds_gamma_scopes.ltx
@@ -231,6 +231,9 @@
 	s3ds_reticle_size 	= 2.5
 	s3ds_eye_relief 	= 3.85	
 	magnification 		= 3.5
+ 	s3ds_chroma_power   	= 0.1
+    	s3ds_exit_pupil     	= 0.38
+    	s3ds_lens_color     	= lens_old_yellow
 
 ![vulcan] --NVG, 3.5x
 	s3ds_reticle_size 	= 3	
@@ -239,7 +242,7 @@
 	s3ds_chroma_power	= 0.05	
 	s3ds_image_type 	= 1
 	s3ds_reticle_type	= 7
-	ms_count 			= 2
+	ms_count 		= 2
 	magnification 		= 3.5	
 	
 ![susat]	--4x
@@ -270,8 +273,8 @@
 	s3ds_eye_relief 	= 2
 	s3ds_chroma_power	= 0.04	
 	s3ds_reticle_type 	= 4
-	ms_count 			= 3
-	ms_colors			= scope_black, scope_red_dim, scope_red
+	ms_count 		= 3
+	ms_colors		= scope_black, scope_red_dim, scope_red
 	magnification 		= 4	
     min_magnification	= 1
 	
@@ -280,8 +283,8 @@
 	s3ds_eye_relief 	= 2
 	s3ds_chroma_power	= 0.04	
 	s3ds_reticle_type 	= 4
-	ms_count 			= 3
-	ms_colors			= scope_black, scope_red_dim, scope_red
+	ms_count 		= 3
+	ms_colors		= scope_black, scope_red_dim, scope_red
 	magnification 		= 4		
     min_magnification	= 1
 	
