--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_z_misc_changes.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_z_misc_changes.ltx
@@ -13,3 +13,6 @@ cost                		                        = 97490
 
 ![gauss_sight]
 cost                		                        = 293200
+
+![wpn_addon_scope_pu]
+cost                		                        = 4950
