mossberg idle sway fix

--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_shotgun.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_shotgun.ltx
@@ -561,6 +561,9 @@ item_visual                              = dynamics\weapons\wpn_saiga12s_isg\wpn
 ![wpn_mossberg590_rail]
 >scopes	=	tac30, monstrum, trihawk, hamr, vulcan
 
+![wpn_mossberg590_rail_hud]
+anm_idle_aim = h_m590_aim_swayless, m590_idle
+		
 ![wpn_mossberg590_rail_acog]
 scope_zoom_factor                = 42.86
 scope_texture                    =
